--- a/views/edit_task.ejs
+++ b/views/edit_task.ejs
@@ -18,37 +18,37 @@
                         <form method="POST" id="edit_task">
                             <div class="new_task">
                              <div class="form-group">
-                                 <label for="taskName" class="text-light">Task Name</label>
+                                 <label for="name" class="text-light">Task Name</label>
                                  <input type="hidden" name="id" value="<%= task._id%>">
-                                 <input type="text" name="taskName" value="<%= task.name%>" placeholder="Task Name">
+                                 <input type="text" name="name" value="<%= task.name%>" placeholder="Task Name">
                              </div>
                              <div class="form-group">
-                                 <label for="taskPriority" class="text-light">Task Priority</label>
+                                 <label for="priority" class="text-light">Task Priority</label>
                                  <div class="radio inline">
-                                     <input type="radio" id="radio-1" name="taskPriority" value="Low" <%= task.taskPriority == 'Low'?'checked':'' %>>
+                                     <input type="radio" id="radio-1" name="priority" value="Low" <%= task.priority == 'Low'?'checked':'' %>>
                                      <label for="radio-1" class="radio-label">Low</label>
                                  </div>
                                  <div class="radio inline">
-                                     <input type="radio" id="radio-2" name="taskPriority" value="Medium" <%= task.taskPriority == 'Medium'?'checked':'' %>>
+                                     <input type="radio" id="radio-2" name="priority" value="Medium" <%= task.priority == 'Medium'?'checked':'' %>>
                                      <label for="radio-2" class="radio-label">Medium</label>
                                  </div>
                                  <div class="radio inline">
-                                     <input type="radio" id="radio-3" name="taskPriority" value="High" <%= task.taskPriority == 'High'?'checked':'' %>>
+                                     <input type="radio" id="radio-3" name="priority" value="High" <%= task.priority == 'High'?'checked':'' %>>
                                      <label for="radio-3" class="radio-label">High</label>
                                  </div>
                              </div>
                              <div class="form-group">
-                                 <label for="taskPriority" class="text-light">Task Label</label>
+                                 <label for="label" class="text-light">Task Label</label>
                                  <div class="radio inline">
-                                     <input type="radio" id="radio-4" name="taskLabel" value="Personal" <%= task.taskLabel == 'Personal'?'checked':'' %>>
+                                     <input type="radio" id="radio-4" name="label" value="Personal" <%= task.label == 'Personal'?'checked':'' %>>
                                      <label for="radio-4" class="radio-label">Personal</label>
                                  </div>
                                  <div class="radio inline">
-                                     <input type="radio" id="radio-5" name="taskLabel" value="Work" <%= task.taskLabel == 'Work'?'checked':'' %>>
+                                     <input type="radio" id="radio-5" name="label" value="Work" <%= task.label == 'Work'?'checked':'' %>>
                                      <label for="radio-5" class="radio-label">Work</label>
                                  </div>
                                  <div class="radio inline">
-                                     <input type="radio" id="radio-6" name="taskLabel" value="Shopping" <%= task.taskLabel == 'Shopping'?'checked':'' %>>
+                                     <input type="radio" id="radio-6" name="label" value="Shopping" <%= task.label == 'Shopping'?'checked':'' %>>
                                      <label for="radio-6" class="radio-label">Shopping</label>
                                  </div>
                              </div>
