--- a/views/include/_show.ejs
+++ b/views/include/_show.ejs
@@ -1,6 +1,6 @@
 <% for(var i = 0; i < tasks.length; i++) { %>
 <tr>
-    <td><input type="checkbox"></td>
+    <td><input id="boxx" type="checkbox"></td>
     <td><%= tasks[i].name %></td>
     <td><%= tasks[i].priority %></td>
     <td><%= tasks[i].label %></td>
