--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="box-nav d-flex justifty-between">
             <a href="/add-task" class="border-shadow">
-                <span class="text-gradient">Add Task<i class="fa-solid fa-notes"></i></span>
+                <span class="text-gradient">Add Task</span>
             </a>
         </div>
         <!-- Form -->
@@ -18,8 +18,8 @@
                     <tr>
                         <th>Completed</th>
                         <th>Task Name</th>
-                        <th>Task Priority</th>
-                        <th>Task Label</th>
+                        <th>Priority</th>
+                        <th>Label</th>
                         <th>Action</th>
                     </tr>
                 </thead>
