--- a/views/edit_task.ejs
+++ b/views/edit_task.ejs
@@ -6,7 +6,7 @@
     <main id="site-main">
         <div class="container">
             <div class="box-nav d-flex justifty-between">
-                <div class="filter">
+                <div class="text-gradient">
                     <a href="/"><i class="fa-solid fa-backward"></i>All Tasks</a>
                 </div>
             </div>
